fixed spacing issue that caused a line to appear on rush page

--- a/src/Components/pages/pagesCSS/Rush.css
+++ b/src/Components/pages/pagesCSS/Rush.css
@@ -1,7 +1,7 @@
 /* Head Piece */
 .RushHead {
     position: relative;
-    height: 65vh;
+    height: 63vh;
     width: 100vw;
     display: flex;
     flex-direction: column;
